# FastBOW

./: .gitignore  CMakeLists.txt  README.md  notes.txt
hw3/: CMakeLists.txt
hw3/api/: html_writer.cpp  image_browser.cpp
hw3/include/: image_browser.hpp
hw3/src/: config.txt  html_writer.cpp  image_browser.cpp  main.cpp
hw3/web_app/: example.html
include/: bow_dictionary.hpp  codebook.hpp  convert_dataset.hpp  image_browser.hpp  kmeans.hpp  serialize.hpp
src/: bow_dictionary.cpp  codebook.cpp  config.txt  convert_dataset.cpp  html_writer.cpp  kmeans.cpp  main.cpp  main_c.cpp  serialize.cpp
tests/: test_serialize.cpp
web_app/: test.html
